@@ -25,12 +25,3 @@ statemachinereader
 * All (Legal) Transitions Coverage (ALTC)
 * All Round-Trip Path Coverage (ARTPC) (Not Done)
 * Sneak Path Suite (Not Done)
-
-##### JVM Settings #####
-Run with the following JVM options
-* --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-* --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-* --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-* --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
-* --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-* --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
